# QtTex_Gen

./: .gitignore  AnkiConnect.md  AnkiConnect_Summary.md  CMakeLists.txt  CMakeUserPresets.json  Project_Architecture.md  README.md  main.cpp
AnkiConnect/: AnkiConnect.cpp  AnkiConnect.h
controller/: AppController.cpp  AppController.h
core/: AnkiCard.h  CardParser.cpp  CardParser.h  FileHander.cpp  FileHander.h  LatexConverter.cpp  LatexConverter.h  core.h
ui/: MainWindow.qml
